changed the Magic System: issue with mana usage;